pkg/servicemesh/federation/example/config-poc/examples/mongodb-remote-virtualservice.yaml
# VirtualService resource that redirects the local service to the remote
# services.  This only works with passthrough.

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mongodb-remote
  namespace: mesh2-bookinfo
spec:
  hosts:
    - mongodb.mesh2-bookinfo.svc.cluster.local
  tcp:
    - route:
        - destination:
            host: mongodb.bookinfo.svc.mesh1.local
