pkg/servicemesh/federation/example/config-poc/examples/virtualservice-mongodb-passthrough.yaml
# VirtualService resource that redirects the local service to the remote
# services.  This only works with passthrough.

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mongodb-remote
  namespace: mesh2-bookinfo
spec:
  hosts:
    - mongodb.mesh2-bookinfo.svc.cluster.local
  tcp:
    - match:
        - port: 27017
      route:
        - destination:
            host: mongodb.mesh1-bookinfo.svc.cluster.local
            port:
              number: 27017
