pkg/servicemesh/federation/example/config-poc/examples/virtualservice-ratings-remote.yaml
# VirtualService resource that redirects the local service to the remote
# services.  This only works with passthrough.

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ratings-remote
  namespace: mesh2-bookinfo
spec:
  hosts:
    - ratings.mesh2-bookinfo.svc.cluster.local
  http:
    - rewrite:
        authority: ratings.bookinfo.svc.mesh1.local
      route:
        - destination:
            host: ratings.bookinfo.svc.mesh1.local
